<resources>
    <string name="app_name">Naive News</string>
    <string name="splash_word1">图样图森破</string>
    <string name="splash_word2">SOMETIMES NAIVE</string>
    <string name="search_history">搜索记录</string>
    <string name="title_home">首页</string>
    <string name="title_static">疫情数据</string>
    <string name="title_professor">知疫学者</string>
    <string name="title_me">我的</string>
    <string name="title_graph">疫情图谱</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="refreshing">刷新中……</string>
    <string name="loading">加载中……</string>
    <string name="search">搜索</string>
    <string name="news_data_url">https://covid-dashboard.aminer.cn/api/dist/epidemic.json</string>
    <string name="news_event_url">https://covid-dashboard.aminer.cn/api/events/list</string>
    <string name="news_text_url">https://covid-dashboard-api.aminer.cn/event/[id]</string>
    <string name="news_map_url">https://innovaapi.aminer.cn/covid/api/v1/pneumonia/entityquery</string>
    <string name="news_scholar_url">https://innovaapi.aminer.cn/predictor/api/v1/valhalla/highlight/get_ncov_expers_list?v=2</string>
<!--    <array name="home_video_tab">-->
<!--        <item>all</item>-->
<!--        <item>news</item>-->
<!--        <item>paper</item>-->
<!--        <item>0</item>-->
<!--        <item>1</item>-->
<!--        <item>2</item>-->
<!--        <item>3</item>-->
<!--        <item>4</item>-->
<!--    </array>-->
    <array name="province_in_China">
        <item>北京@Beijing</item>
        <item>海南@Hainan</item>
        <item>福建@Fujian</item>
        <item>新疆@Xinjiang</item>
        <item>上海@Shanghai</item>
        <item>广东@Guangdong</item>
        <item>台湾@Taiwan</item>
        <item>河北@Hebei</item>
        <item>河南@Henan</item>
        <item>山东@Shandong</item>
        <item>天津@Tianjin</item>
        <item>辽宁@Liaoning</item>
        <item>吉林@Jilin</item>
        <item>黑龙江@Heilongjiang</item>
        <item>陕西@Shaanxi</item>
        <item>山西@Shanxi</item>
        <item>甘肃@Gansu</item>
        <item>宁夏@Ningxia</item>
        <item>内蒙古@Inner Mongol</item>
        <item>四川@Sichuan</item>
        <item>重庆@Chongqing</item>
        <item>云南@Yunnan</item>
        <item>广西@Guangxi</item>
        <item>江苏@Jiangsu</item>
        <item>浙江@Zhejiang</item>
        <item>湖北@Hubei</item>
        <item>湖南@Hunan</item>
        <item>江西@Jiangxi</item>
        <item>安徽@Anhui</item>
        <item>贵州@Guizhou</item>
        <item>青海@Qinghai</item>
        <item>西藏@Xizang</item>
    </array>
    <array name="country_in_world">
        <item>世界总体@World</item>
        <item>中国@China</item>
        <item>美国@United States of America</item>
        <item>英国@United Kingdom</item>
        <item>俄罗斯@Russia</item>
        <item>加拿大@Canada</item>
        <item>日本@Japan</item>
        <item>韩国@South Korea</item>
        <item>新加坡@Singapore</item>
        <item>德国@Germany</item>
        <item>法国@France</item>
        <item>西班牙@Spain</item>
        <item>荷兰@Netherlands</item>
        <item>芬兰@Finland</item>
        <item>波兰@Poland</item>
        <item>挪威@Norway</item>
        <item>爱尔兰@Ireland</item>
        <item>冰岛@Iceland</item>
        <item>希腊@Greece</item>
        <item>奥地利@Austria</item>
        <item>罗马尼亚@Romania</item>
        <item>南非@South Africa</item>
        <item>哥伦比亚@Colombia</item>
        <item>澳大利亚@Australia</item>
        <item>新西兰@New Zealand</item>
        <item>巴西@Brazil</item>
        <item>古巴@Cuba</item>
        <item>印度@India</item>
        <item>越南@Vietnam</item>
        <item>土耳其@Turky</item>
        <item>埃及@Egypt</item>
        <item>巴基斯坦@Pakistan</item>
        <item>印度尼西亚@Indonesia</item>
        <item>墨西哥@Mexico</item>
        <item>秘鲁@Peru</item>
    </array>
</resources>