<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_news"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_static"
        android:icon="@drawable/ic_static"
        android:title="@string/title_static" />

    <item
        android:id="@+id/navigation_graph"
        android:icon="@drawable/ic_graph"
        android:title="@string/title_graph" />

    <item
        android:id="@+id/navigation_professor"
        android:icon="@drawable/ic_professor"
        android:title="@string/title_professor" />

    <item
        android:id="@+id/navigation_me"
        android:icon="@drawable/ic_me"
        android:title="@string/title_me" />

</menu>