<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">
    <TextView
        android:id="@+id/splash_app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:paddingTop="60dp"
        android:paddingBottom="60dp"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:text="@string/app_name" />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >
        <ImageView
            android:id="@+id/splash_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_splash" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/splash_word1" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:layout_gravity="center_horizontal"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/splash_word2" />
    </LinearLayout>
</RelativeLayout>